Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Openpopup : " />
+    <meta name="description" content="Open Source Pop Guide  : Open Source Resource Tool Kit for everything Pop Up" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Openpopup</title>
+    <title>Open Source Pop Guide </title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ideafoundry/openpopup">View on GitHub</a>
 
-          <h1 id="project_title">Openpopup</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Open Source Pop Guide </h1>
+          <h2 id="project_tagline">Open Source Resource Tool Kit for everything Pop Up</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ideafoundry/openpopup/zipball/master">Download this project as a .zip file</a>
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Openpopup maintained by <a href="https://github.com/ideafoundry">ideafoundry</a></p>
+        <p class="copyright">Open Source Pop Guide  maintained by <a href="https://github.com/ideafoundry">ideafoundry</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
